# udp2docker

./: .gitignore  CMakeLists.txt  FIRST_BUILD_GUIDE.md  LICENSE  MSYS2_SETUP.md  QUICKSTART.md  README.md  docker-compose.yml  udp2docker.ini
config/: default.ini
docker/: Dockerfile  start.sh  udp_server.py
examples/: main.cpp
include/udp2docker/: common.h  config_manager.h  logger.h  message_protocol.h  udp_client.h
scripts/: build-msys2.bat  build-msys2.sh  build.bat  build.sh  quick-start.sh  setup-msys2-env.sh  troubleshoot.sh  verify-build.sh
src/: config_manager.cpp  logger.cpp  message_protocol.cpp  udp_client.cpp
tests/: test_main.cpp
